crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-no_vector_engine-dataset-vector_search_metadata_megascience_vector_search_sql_random.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT subject FROM vector_search(qs, 'second', answer) order by score desc LIMIT 4"
---
[
  {
    "subject": "math"
  },
  {
    "subject": "math"
  },
  {
    "subject": "math"
  },
  {
    "subject": "math"
  }
]
