crates/runtime/tests/search/snapshots/integration_models__search__duckdb_file-no_vector_engine-no_text_engine-dataset-hybrid_multiple_column_megascience_vector_search_sql_vectors_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, array_length(answer_embedding), trunc(_score, 3) as _score  FROM vector_search(qs, 'second', answer) order by _score desc, id desc LIMIT 4;"
---
Could not prepare EXPLAIN plan: Query execution failed: code: 'Client specified an invalid argument', message: "User function 'vector_search' is called on table 'spice.public.qs' that does not have an embedding index on 'answer' column. Indexed column(s): question."
